// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Processors Text Align Processor should process font style correctly: font-style 1`] = `
"// Generated SCSS Variables
$text-primary: #a3adad
$size-16: 16px
$font-style-italic: Italic
$font-weight-normal: Normal
$font-weight-medium: 500px

// Generated SCSS Mixins
@mixin font-style-italics-variable
 color: $text-primary
 font-family: Inter
 font-size: $size-16
 font-weight: 400
 font-style: $font-style-italic
 line-height: normal
 width: 100px
 height: 100px

@mixin font-style-italics-custom
 color: $text-primary
 font-family: Inter
 font-size: 16px
 font-weight: 400
 font-style: Italic
 line-height: normal
 width: 100px
 height: 100px

@mixin font-weight-string-variable
 color: $text-primary
 font-family: Inter
 font-size: $size-16
 font-weight: 400
 font-style: $font-weight-normal
 line-height: normal
 width: 100px
 height: 100px

@mixin font-weight-string-custom
 color: $text-primary
 font-family: Inter
 font-size: 16px
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

@mixin font-weight-numerical-variable
 color: $text-primary
 font-family: Roboto
 font-size: $size-16
 font-weight: $font-weight-medium
 font-style: Medium
 line-height: normal
 width: 100px
 height: 100px

"
`;

exports[`Text Processors Text Align Processor should process paragraph alignment correctly: paragraph-alignment 1`] = `
"// Generated SCSS Variables
$text-primary: #a3adad
$size-16: 16px

// Generated SCSS Mixins
@mixin frame--top
 padding: 0px
 background: #ffffff

@mixin autolayout--top
 display: flex
 flex-direction: column
 gap: 10px
 padding: 0px 30px
 background: #ffffff
 justify-content: center

@mixin paragraph-alignment-top
 color: $text-primary
 font-family: Inter
 font-size: $size-16
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

@mixin frame--middle
 padding: 0px
 background: #ffffff

@mixin autolayout--middle
 display: flex
 flex-direction: column
 gap: 10px
 padding: 0px 30px
 background: #ffffff
 justify-content: center

@mixin paragraph-alignment-center
 color: $text-primary
 font-family: Inter
 font-size: $size-16
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

@mixin frame--bottom
 padding: 0px
 background: #ffffff

@mixin autolayout--bottom
 display: flex
 flex-direction: column
 gap: 10px
 padding: 0px 30px
 background: #ffffff
 justify-content: center

@mixin paragraph-alignment-bottom
 color: $text-primary
 font-family: Inter
 font-size: $size-16
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

"
`;

exports[`Text Processors Text Align Processor should process text alignment correctly: text-alignment 1`] = `
"// Generated SCSS Variables
$text-primary: #bfc5c6
$size-16: 16px

// Generated SCSS Mixins
@mixin paragraph-justification-justify
 color: $text-primary
 font-family: Inter
 font-size: 16px
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

@mixin paragraph-justification-right
 color: $text-primary
 font-family: Inter
 font-size: 16px
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

@mixin paragraph-justification-center
 color: $text-primary
 font-family: Inter
 font-size: $size-16
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

@mixin paragraph-justification-left
 color: $text-primary
 font-family: Inter
 font-size: $size-16
 font-weight: 400
 font-style: Regular
 line-height: normal
 width: 100px
 height: 100px

"
`;
